finalizei homepage(a principio)

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <section>
             <ul>
                 <li>
-                    <i class="fa-regular fa-comment"></i>
+                    <span class="fa-regular fa-comment"></span>
                     <h2>
                         Atendimento
                     </h2>
@@ -54,7 +54,7 @@
                     <a href="#">Leia Mais</a>
                 </li>
                 <li>
-                    <i class="fa-regular fa-heart"></i>
+                    <span class="fa-regular fa-heart"></span>
                     <h2>
                         Compatibilidade
                     </h2>
@@ -64,7 +64,7 @@
                     <a href="#">Leia Mais</a>
                 </li>
                 <li>
-                    <i class="fa-regular fa-thumbs-up"></i>
+                    <span class="fa-regular fa-thumbs-up"></span>
                     <h2>
                         Avaliação
                     </h2>
@@ -75,6 +75,108 @@
                 </li>
             </ul>
         </section>
+        <section id="clientes">
+            <ul>
+                <li>
+                    <span class="fa-regular fa-user"></span>
+                    <h2>
+                        +850<br>Clientes
+                    </h2>
+                </li>
+                <li>
+                    <span class="fa-solid fa-calendar-days" style="color: #ffffff;"></span>
+                    <h2>
+                        +200<br>Destinos
+                    </h2>
+                </li>
+                <li>
+                    <span class="fa-regular fa-lightbulb"></span>
+                    <h2>
+                        +370<br>Atividades
+                    </h2>
+                </li>
+                <li>
+                    <span class="fa-regular fa-clock"></span>
+                    <h2>
+                        +980<br>Horas
+                    </h2>
+                </li>
+            </ul>
+        </section>
+        <section id="att">
+            <div class="principal">
+                <div>
+                    <h2>
+                        Possibilidades de Atividades
+                    </h2>
+                    <p>
+                        Nunca é demais lembrar o peso e o significado destes problemas, uma vez que a complexidade dos estudos efetuados promove a alavancagem de todos os recursos funcionais envolvidos. O empenho em analisar o surgimento do comércio virtual assume importantes posições no estabelecimento das posturas dos órgãos dirigentes com relação às suas atribuições.
+                    </p>
+                    <div>
+                        <a href="#">TESTAR PERFIL</a>
+                        <a href="#">ESCOLHER OPÇÕES</a>    
+                    </div>
+                </div>
+
+                <div class="youtube">
+                    <img src="img/youtube.png" alt="youtube">
+                </div>
+            </div>
+        </section>
     </main>
+    <footer>
+        <div>
+            <ul>
+                <li>
+                    <a href="#"><span class="fa-brands fa-square-twitter"></span></a>
+                </li>
+                <li>
+                    <a href="#"><span class="fa-brands fa-square-facebook"></span></a>
+                </li>
+                <li>
+                    <a href="#"><span class="fa-brands fa-square-pinterest"></span></a>
+                </li>
+                <li>
+                    <a href="#"><span class="fa-brands fa-square-instagram"></span></a>
+                </li>
+            </ul>
+            <p>
+                Live &copy; alguns direitos reservados
+            </p>
+        </div>
+
+
+        <div>
+            <h3>
+                Entre em contato:
+            </h3>
+            <p>
+                <span class="fa-solid fa-envelope"></span> contato@live.com <br><span class="fa-solid fa-message"></span>(49) 3526-8235
+            </p>
+        </div>
+
+
+        <div>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="#">Sobre</a>
+                    </li>
+                    <li>
+                        <a href="#">Planos</a>
+                    </li>
+                    <li>
+                        <a href="#">FAQ</a>
+                    </li>
+                    <li>
+                        <a href="#">Cadastro</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </footer>
 </body>
 </html>
